# sspace

./: README.md  pyproject.toml
.github/workflows/: daily.yml
algorithms/: README.md  problem_template.md  tag_info.yml
algorithms/problems/2021/10/: LeetCode_0001_简单_两数之和.md  LeetCode_0002_中等_两数相加.md  LeetCode_0005_中等_最长回文子串.md  LeetCode_0011_中等_盛最多水的容器.md  LeetCode_0015_中等_三数之和.md  LeetCode_0016_中等_最接近的三数之和.md  LeetCode_0021_简单_合并两个有序链表.md  LeetCode_0029_中等_两数相除.md  LeetCode_0033_中等_搜索旋转排序数组.md  LeetCode_0042_困难_接雨水.md  LeetCode_0086_中等_分隔链表.md  LeetCode_0352_困难_将数据流变为多个不相交区间.md  LeetCode_0441_简单_排列硬币.md  LeetCode_0611_中等_有效三角形的个数.md
algorithms/problems/2021/11/: LeetCode_0496_简单_下一个更大元素.md  LeetCode_0859_简单_亲密字符串.md  剑指Offer_0300_简单_数组中重复的数字.md  剑指Offer_0400_中等_二维数组中的查找.md  剑指Offer_0500_简单_替换空格.md  剑指Offer_0600_简单_从尾到头打印链表.md  剑指Offer_0700_中等_重建二叉树.md  剑指Offer_0900_简单_用两个栈实现队列.md  剑指Offer_1001_简单_斐波那契数列.md  剑指Offer_1002_简单_跳台阶.md  (+29 more)
examples/llm/prompts/: self_reflect.py
examples/python/starter/: class_member.py
notes/: 000-数据结构与算法.md  010-深度学习.md  020-机器学习.md  030-自然语言处理.md  040-LLM应用.md  041-LLM研究.md  110-Python.md  220-大数据.md  299-Tools.md  997-Papers.md  997-论文笔记.md  998-Tools.md  999-WIKI.md  README.md  README_dev.md  README_template.md  README_template_v1.md  README_template_v2.md  README_v1.md  README_v2.md  _tags.json  note_template.md
notes/_assets/papers/: README.md
scripts/: daily.py
scripts/once/: update_problem_info.py
scripts/out_of_use/: git_init.sh
scripts/readme/: _base.py  algorithms.py  build.py  main.py  notes.py  utils.py
src/huaytools/utils/: _utils.py
(+467 files in other folders)
